--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,12 @@
   command = "npm run build"
   publish = "dist"
 
+# Force HTTPS
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
+
 # Handle SPA routing
 [[redirects]]
   from = "/*"
