--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "@vitejs/plugin-react-swc": "3.5.0",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
+    "svg-to-ico": "^1.0.15",
+    "svgexport": "^0.4.2",
     "tailwindcss": "3.4.1",
     "tempo-devtools": "^2.0.94",
     "typescript": "^5.2.2",
