--- a/netlify.toml
+++ b/netlify.toml
@@ -1,18 +1,21 @@
-# netlify.toml
-[build]
-  command = "npm run build"
-  publish = "dist"
-
-# Force HTTPS
-[[headers]]
-  for = "/*"
-  [headers.values]
-    Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
-
-# Handle SPA routing
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
 
-# Environment variables will be set in the Netlify dashboard
+[build]
+  command = "npm run build"
+  publish = "dist"
+
+# Environment variables needed for Edge Functions
+[build.environment]
+  VITE_SUPABASE_URL = "${VITE_SUPABASE_URL}"
+  VITE_SUPABASE_ANON_KEY = "${VITE_SUPABASE_ANON_KEY}"
+
+# Add CORS headers for Supabase Edge Functions
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
+    Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, Authorization, x-client-info, apikey"
