--- a/netlify.toml
+++ b/netlify.toml
@@ -11,6 +11,13 @@
 [build.environment]
   VITE_SUPABASE_URL = "${VITE_SUPABASE_URL}"
   VITE_SUPABASE_ANON_KEY = "${VITE_SUPABASE_ANON_KEY}"
+  SUPABASE_URL = "${SUPABASE_URL}"
+  SUPABASE_ANON_KEY = "${SUPABASE_ANON_KEY}"
+  SUPABASE_SERVICE_KEY = "${SUPABASE_SERVICE_KEY}"
+  SUPABASE_PROJECT_ID = "${SUPABASE_PROJECT_ID}"
+  JWT_SECRET = "${JWT_SECRET}"
+  ZOHO_SMTP_USERNAME = "${ZOHO_SMTP_USERNAME}"
+  ZOHO_SMTP_PASSWORD = "${ZOHO_SMTP_PASSWORD}"
 
 # Add CORS headers for Supabase Edge Functions
 [[headers]]
