--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.5",
     "framer-motion": "^11.18.0",
+    "google-auth-library": "^9.15.1",
+    "google-spreadsheet": "^4.1.4",
     "jose": "^6.0.11",
     "lucide-react": "^0.394.0",
     "react": "^18.2.0",
