--- a/netlify.toml
+++ b/netlify.toml
@@ -7,6 +7,9 @@
   command = "npm run build"
   publish = "dist"
 
+[context.production]
+  base = "stable-branch"
+
 # Environment variables needed for Edge Functions
 [build.environment]
   VITE_SUPABASE_URL = "${VITE_SUPABASE_URL}"
