--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,7 @@
 [build]
   command = "npm run build"
   publish = "dist"
+  functions = "functions"
 
 # Environment variables needed for Edge Functions
 [build.environment]
@@ -18,6 +19,7 @@
   JWT_SECRET = "${JWT_SECRET}"
   ZOHO_SMTP_USERNAME = "${ZOHO_SMTP_USERNAME}"
   ZOHO_SMTP_PASSWORD = "${ZOHO_SMTP_PASSWORD}"
+  ZEROBOUNCE_API_KEY = "${ZEROBOUNCE_API_KEY}"
 
 # Add CORS headers for Supabase Edge Functions
 [[headers]]
@@ -26,3 +28,11 @@
     Access-Control-Allow-Origin = "*"
     Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
     Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, Authorization, x-client-info, apikey"
+
+# Add CORS headers for Netlify Functions
+[[headers]]
+  for = "/.netlify/functions/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
+    Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept"
