--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "framer-motion": "^11.18.0",
     "jose": "^6.0.11",
     "lucide-react": "^0.394.0",
+    "nodemailer": "^7.0.3",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
